fix white padding by hiding slider overlap

--- a/app/assets/stylesheets/sections/private-financing.sass
+++ b/app/assets/stylesheets/sections/private-financing.sass
@@ -20,6 +20,8 @@
       width: 100%
       padding: 50px 0
       margin: 0 auto -35px
+      position: relative
+      overflow: hidden
 
       p.select
         width: 40%
